# trsltx

./: .gitignore  Cargo.toml  README.md
src/: chew.py  latex.ebnf  latex.g4  lib.rs  ltx_grammar.ebnf  ltx_grammar.g4  ltxprs.rs  main.rs  prompt.txt  sample.ebnf
test/: autosplit.tex  axigen.bib  axigen.tex  axigen_en.tex  long.tex  review_axigen_en.tex  simple.tex  simple_fr.lyx  simple_fr.tex  trs_sample_gram.txt
