[package]
name = "trsltx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
clap = {version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ltxprs = {git = "https://github.com/phelluy/ltxprs"}

#[patch.'https://github.com/phelluy/ltxprs']
#ltxprs = {path = "../ltxprs"}

